--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,20 @@ body {
     padding: 8px;
     background-color: #0047b3;
 }
+
+modal {
+  display: none;
+}
+
+.logoImage {
+  width: 100px;
+  position: fixed;
+  right: 3000px;
+}
+
+.panel-body {
+  background-color: white;
+  border: 5px solid black;
+  padding:10px;
+  margin-top: 15px;
+}
